Fixed the problem with H2 branch